--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
             android:theme="@style/Theme.Trial_app"
             tools:targetApi="31">
         <activity
+                android:name=".HomeLibrary"
+                android:exported="false"/>
+        <activity
                 android:name=".LoginActivity"
                 android:exported="false"/>
         <activity
@@ -33,6 +36,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <meta-data
+                android:name="preloaded_fonts"
+                android:resource="@array/preloaded_fonts"/>
     </application>
 
 </manifest>
